k8s/socket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: socket-depl
spec:
  replicas: 3
  selector:
    matchLabels:
      app: socket
  template:
    metadata:
      labels:
        app: socket
    spec:
      containers:
        - name: socket
          image: proamar/socket-app:k8
---
apiVersion: v1
kind: Service
metadata:
  name: socket-srv
spec:
  selector:
    app: socket
  ports:
    - name: socket
      protocol: TCP
      port: 8000
      targetPort: 8000
