k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.org/websocket-services: "socket-srv"
    nginx.ingress.kubernetes.io/websocket-services: "socket-srv"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:5173"

spec:
  rules:
    - host: ticketing.dev
      http:
        paths:
          - path: /socket.io/?(.*)
            pathType: Prefix
            backend:
              service:
                name: socket-srv
                port:
                  number: 8000
